fix: WEB-0 Update Structure

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Express Server-Side",
   "main": "program.js",
   "scripts": {
-    "dev": "node program.js"
+    "dev": "nodemon program.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^5.0.0-beta.2",
     "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
     "routes": "^2.1.0"
   }
 }
