--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^5.0.0-beta.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
